Handle NULL fb_ptr in pixmap_get_fb

This can happen when HW acceleration is disabled.

Fixes https://gitlab.freedesktop.org/xorg/driver/xf86-video-ati/issues/188